--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
     "discord",
     "bot",
     "rainbowrole",
-    "rainbowbot",
-    "G3ZZINGRainbow"
+    "rainbowbot"
   ],
   "author": "Sena",
   "license": "MIT",
